--- a/css/style.css
+++ b/css/style.css
@@ -12,6 +12,17 @@ body {
 	text-align: center;
  }
 
+table {
+	width: 266px;
+	height: 100px;
+	border: 1px solid;
+}
+
+td {
+	width: 141px;
+	height: 34px;
+	border: 1px solid;
+}
 
 .wrapper {
 min-height: 100%;
@@ -55,7 +66,7 @@ width:250px;
 
 
 
- .image {
+ img {
 height: auto;
   width: 100%;
 }
@@ -64,7 +75,7 @@ height: auto;
 width: 35px;
 padding: 5px;
 border: 0;
-box-shadow: 0;
+box-shadow: none;
 display: inline;
 }
 
@@ -82,26 +93,31 @@ text-align: center;
     } 
   h1 {
 	   font-size: 24px;
+	   color: #F5ECEC;
 }   
-  
   
 
 }
 
-/* For 480px or less */  
+/* For 480px or less */ 
 @media screen and (max-width: 480px){  
     body {  
-        display: 85%;  
+        display: block;  
     }  
 	h1 {
 	   font-size: 20px;
+	   color: #D0B038;
+	   
 }  
- 
- .image {
-height: auto;
-  width: 100%;
-}
-
-
 }
  
+@media screen and (min-width: 980px){  
+  body {
+	  display: block; 
+	  width: 45%;  
+    }  
+  h1 {
+	   font-size: 45px;
+	   color: #307EB5;
+}
+}
