--- a/css/style.css
+++ b/css/style.css
@@ -7,7 +7,7 @@ body {
 	 background-color: #cccccc;
 	 background-repeat: no-repeat;
     background-size: contain;
-    border: 1px solid red;
+    border: 1px solid black;
 	margin: auto;
 	text-align: center;
  }
