--- a/css/style.css
+++ b/css/style.css
@@ -59,12 +59,10 @@ td:active {
 }
 
 .answer { 
-text-align: center;
-margin: 0 auto; 
-width:250px;
+text-align: center; 
+height: auto;
+width: 100%;
 } 
-
-
 
  img {
 height: auto;
@@ -95,8 +93,6 @@ text-align: center;
 	   font-size: 24px;
 	   color: #F5ECEC;
 }   
-  
-
 }
 
 /* For 480px or less */ 
@@ -109,6 +105,7 @@ text-align: center;
 	   color: #D0B038;
 	   
 }  
+
 }
  
 @media screen and (min-width: 980px){  
@@ -120,4 +117,5 @@ text-align: center;
 	   font-size: 45px;
 	   color: #307EB5;
 }
+
 }
