--- a/css/style.css
+++ b/css/style.css
@@ -38,6 +38,7 @@ margin: 1em 1em;
  
 .question {
 	font-weight:bold;
+	background-color: #CFB0B0;
  }
  
 #a1, #a2, #a3, #a4,#a5, #a6, #a7, #a8, #a9, #a10, #a11, #a12, #a13, #a15, #a15, #a16, #a17, #a18, #a19, #a20, #a21, #a22
@@ -58,12 +59,16 @@ td:active {
 	font-family: italic;
 }
 
-.answer { 
+.answer, .answer2 { 
 text-align: center; 
 height: auto;
 width: 100%;
 } 
 
+.answer2 {
+display: none;
+}
+	
  img {
 height: auto;
   width: 100%;
